--- a/fashionhub365_be/package.json
+++ b/fashionhub365_be/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cloudinary": "^2.9.0",
+    "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.1.5",
+    "multer": "^2.0.2",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
